cluster/apps/ersatztv/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ersatztv
  labels:
    app.kubernetes.io/name: ersatztv
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: ersatztv
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ersatztv
    spec:
      containers:
        - name: ersatztv
          image: ghcr.io/ersatztv/ersatztv:latest
          ports:
            - containerPort: 8409
          resources:
            requests:
              cpu: "250m"
              memory: "1Gi"
            limits:
              cpu: "1000m"
              memory: "2Gi"
          volumeMounts:
            - name: config
              mountPath: /config
            - name: transcode
              mountPath: /transcode
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: ersatztv-config
        - name: transcode
          emptyDir: {}
