cluster/apps/ersatztv/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ersatztv
  labels:
    app.kubernetes.io/name: ersatztv
spec:
  type: ClusterIP
  ports:
    - port: 8409
      targetPort: 8409
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: ersatztv
